--- a/Topic-12-Concepts-of-Hypothesis-Testing.rmd
+++ b/Topic-12-Concepts-of-Hypothesis-Testing.rmd
@@ -29,12 +29,6 @@ library(dplyr,warn.conflicts = FALSE)
 library(latex2exp)
 ```
 
-<div class="latex-macros">
-$$\require{color}$$
-$$\definecolor{purple}{RGB}{226, 15, 233}$$
-$$\definecolor{grey}{RGB}{177, 159, 149}$$
-</div>
-
 ## Learning Goals
 
 - Choose appropriate null and alternative hypotheses.
@@ -192,7 +186,7 @@ $H_{0}: p=0.50$ vs. $H_{a}: p\ne 0.50, n=360, \hat{p}=0.56$.
 
 Find the $P$-value for the test and make a decision at the 5% level of significance.
 
-**Solution:** Because $H_a$ is $\color{purple}{p\ne p_0}$ and $\color{grey}{\hat{p}=0.56>p_0}$, the $P$-value is the .purple[double] of the .grey[right tail] area, that is, the $P$-value equals $2P(\hat{p}>0.56)$.
+**Solution:** Because $H_a$ is <span class="purple">\(p\ne p_0\)</span> and <span class="grey">\(\hat{p}=0.56>p_0\)</span>, the $P$-value is the <span class="purple">double</span> of the <span class="grey">right tail</span> area, that is, the $P$-value equals $2P(\hat{p}>0.56)$.
 
 We first find the standard error of the null distribution:
 $$\text{SE}=\sqrt{p_0(1-p_0)/n}=\sqrt{0.5\cdot0.5/360}=`r round(sqrt(0.5*0.5/360),2)`.$$
